--- a/Public/CSS/style1.css
+++ b/Public/CSS/style1.css
@@ -13,7 +13,7 @@ img{
 	margin-left:5px;
 	margin-right: 8px;
 }
-#addNewData_mixscrap,#addnewshipment,#addNewData, #addnewdata_delivery, #addNewData_dwt,#addNewData_quality{
+#addNewData_safety,#addNewData_mixscrap,#addnewshipment,#addNewData, #addnewdata_delivery, #addNewData_dwt,#addNewData_quality{
 	 background: #132057;
 	 border: none;
 }
