--- a/Public/CSS/buttons.css
+++ b/Public/CSS/buttons.css
@@ -1,14 +1,14 @@
 /* Box colors */
 .bg-1 {
-	background: #ECEFF1;
-	color: #37474f;
+	background: url("../Images/food.jpg");
+	color: #ECEFF1;
 }
 .bg-2 {
-	background: #7986cb;
+	background:  url("../Images/food.jpg");
 	color: #ECEFF1;
 }
 .bg-3 {
-	background: #37474f;
+	background: url("../Images/food.jpg");
 	color: #fff;
 }
 
@@ -38,12 +38,14 @@
 
 /* Text color adjustments (we could stick to the "inherit" but that does not work well in Safari) */
 .bg-1 .button {
-	color: #37474f;
-	border-color: #37474f;
+	color: #fff;
+	border-color: #fff;
+
 }
 .bg-2 .button {
-	color: #ECEFF1;
-	border-color: #ECEFF1;
+	color: #fff;
+	border-color: #fff;
+
 }
 .bg-3 .button {
 	color: #fff;
@@ -52,7 +54,7 @@
 
 /* Sizes */
 .button--size-s {
-	font-size: 14px;
+	font-size: 20px;
 }
 .button--size-m {
 	font-size: 16px;
@@ -575,7 +577,7 @@
 	width: 30px;
 	height: 30px;
 	border-radius: 50%;
-	background: #3f51b5;
+	background: #fff;
 	-webkit-transform-origin: 100% 50%;
 	transform-origin: 100% 50%;
 	-webkit-transform: scale3d(1, 2, 1);
